<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_daily_weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="2.5dp"
    android:layout_marginEnd="2.5dp"
    android:background="#fff"
    android:textSize="15sp">

    <TextView
        android:id="@+id/text_view_daily_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:text="@string/comma_space"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/image_view_daily_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/text_view_daily_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/slash"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_view_daily_temp_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/text_view_daily_temp_day_celsius"
        android:layout_centerVertical="true"
        android:text="@string/comma_space"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_view_daily_temp_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/text_view_daily_slash"
        android:text="@string/comma_space"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_view_daily_temp_day_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/text_view_daily_slash"
        android:text="@string/temperature_label"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_view_daily_temp_night_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/text_view_daily_temp_night"
        android:text="@string/temperature_label"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>